# clinicaltrialAI

./: .gitignore  FILE_STRUCTURE.md  Makefile  PLAN.md  README.md  pyproject.toml
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md
infrastructure/helm/clinicaltrial-ai/: Chart.yaml  values.yaml
infrastructure/helm/clinicaltrial-ai/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  init-job.yaml
scripts/: check_neo4j.py  export_report.py  load_omop.py  run_simulation.py  setup_graph.py
src/agents/adversary/: agent.py
src/agents/cohort/: agent.py
src/agents/judge/: agent.py
src/agents/orchestrator/: graph.py  runner.py
src/agents/protocol/: agent.py
src/agents/shared/: messages.py
src/api/: app.py
src/api/routers/: simulations.py
src/graph/neo4j/: driver.py
src/graph/queries/: cohort.py
src/graph/rag/: retriever.py
src/graph/schema/: nodes.py
src/ingestion/deid/: safe_harbor.py
src/ingestion/fhir/: client.py
src/ingestion/omop/: etl.py
src/ingestion/pipelines/: ingest_dag.py
src/llm/prompt_engineering/: templates.py
src/observability/: tracing.py
src/security/audit_ledger/: ledger.py
src/security/rbac/: policies.py
tests/fixtures/: sample_fhir_bundle.json  sample_protocol.json  synthetic_patients.json
tests/integration/: test_api_simulate.py
tests/security/: test_audit_ledger.py  test_phi_leakage.py
tests/unit/: test_agent_messages.py  test_deid.py  test_omop_etl.py
