[tool.poetry]
name = "clinicaltrial-ai"
version = "0.1.0"
description = "AI platform to simulate and emulate clinical trials"
authors = ["ClinicalTrialAI Team <dev@example.com>"]
readme = "README.md"
packages = [ { include = "src" } ]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"
neo4j = "^5.19.0"
sqlalchemy = "^2.0.28"
psycopg = { version = "^3.1", extras = ["binary"] }
redis = "^5.0.1"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
langgraph = "^0.2.0"
openai = "^1.14.3"
tenacity = "^9.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
black = "^24.3.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
